@@ -15,6 +15,8 @@
 - [Bug] Comment timestamp links (when in grouped mode) now correctly link / update once page name is fetched via API
 - "social activity" summaries now support polls & show image placeholder in text summaries
 - "social activity" posts now show official new/reply icons next to them
+- Added new filters for page edits + page creation
+	- Made it so if logs + page edits + page creation are all unselected then recentchanges won't load; this can allow viewing only discussions/abuse logs
 
 
 == 2.16 - 21 August 2021 ==
